[gd_scene load_steps=4 format=3 uid="uid://bt18am8td2uv7"]

[ext_resource type="Script" uid="uid://c6rksrks842d6" path="res://actors/ui/GameOverView.gd" id="1_27m5g"]
[ext_resource type="Shader" uid="uid://bcfjqtpjdcbrm" path="res://reso/blur.gdshader" id="2_5yyo8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3na1i"]
shader = ExtResource("2_5yyo8")
shader_parameter/blur_amount = 2.1
shader_parameter/mix_amount = 0.0
shader_parameter/color_over = Color(0, 0, 0, 1)

[node name="GameOverView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27m5g")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_3na1i")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = 59.0
offset_right = -120.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 9.0
offset_right = 104.0
offset_bottom = 32.0
grow_horizontal = 2
text = "Game Over"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 36.0
offset_right = 104.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
text = "Dimensional Portal Destroyed!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -70.0
offset_right = 112.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0

[node name="Retry" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Retry"

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Main Menu"

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="pressed" from="Panel/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
